<resources>
    <string name="app_name">Cost Calculator 2.0</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="app_heading">MONKEY ECONOMY BUREAU</string>
    <string name="page_heading1">Cost</string>
    <string name="page_heading2">Calculator</string>
    <string name="menu_button">MENU</string>
    <string name="tower_1">Tower 1</string>
    <string name="insert_tower">Insert Tower</string>

    <string name="top">Top</string>
    <string name="middle">Mid</string>
    <string name="bottom">Low</string>

    <string name="dash">-</string>
    <string name="enter">Enter</string>
    <string name="plus">+</string>
    <string name="tower_cost">Tower Cost</string>
    <string name="add_new_tower">Add New Tower</string>

    <string name="tower_selection">Select Tower</string>

    <string-array name="towers">
        <item>Select Tower</item>
        <item>Dart Monkey</item>
        <item>Boomerang Monkey</item>
        <item>Bomb Shooter</item>
        <item>Tack Shooter</item>
        <item>Ice Monkey</item>
        <item>Glue Gunner</item>
        <item>Sniper Monkey</item>
        <item>Monkey Sub</item>
        <item>Monkey Buccaneer</item>
        <item>Monkey Ace</item>
        <item>Heli Pilot</item>
        <item>Mortar Monkey</item>
        <item>Dartling Gunner</item>
        <item>Wizard Monkey</item>
        <item>Super Monkey</item>
        <item>Ninja Monkey</item>
        <item>Alchemist</item>
        <item>Druid</item>
        <item>Banana Farm</item>
        <item>Spike Factory</item>
        <item>Monkey Village</item>
        <item>Engineer Monkey</item>
    </string-array>

</resources>