<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#B4D9DD"
    app:flow_verticalAlign="center"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/normal_button_template"
        android:fontFamily="serif-monospace"
        android:text="@string/menu_button"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/app_header"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#4CAF50" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="441dp"
        android:layout_height="791dp"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/small_background"
        android:layout_width="522dp"
        android:layout_height="273dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/small_background_tile__2_"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:fontFamily="casual"
        android:layerType="none"
        android:text="@string/app_heading"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/menu_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/page_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:fontFamily="casual"
        android:text="@string/page_heading1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/calculator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/page_heading2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_header" />

    <EditText
        android:id="@+id/tower_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="210dp"
        android:height="48dp"
        android:background="@color/white"
        android:backgroundTint="#E3DB96"
        android:elegantTextHeight="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/tower_cost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/tower_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="serif-monospace"
        android:text="@string/tower_1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.532" />

    <EditText
        android:id="@+id/path3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="200dp"
        android:width="30sp"
        android:height="48dp"
        android:background="@color/white"
        android:elegantTextHeight="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/bottom"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <EditText
        android:id="@+id/path2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:width="30sp"
        android:height="48dp"
        android:background="@color/white"
        android:elegantTextHeight="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/middle"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/path3"
        app:layout_constraintStart_toEndOf="@+id/path1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <EditText
        android:id="@+id/path1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:width="30sp"
        android:height="48dp"
        android:background="@color/white"
        android:elegantTextHeight="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/top"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <TextView
        android:id="@+id/dash_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        android:text="@string/dash"
        android:textSize="50sp"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/tower_cost"
        app:layout_constraintEnd_toStartOf="@+id/path2"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/path1"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/dash_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        android:text="@string/dash"
        android:textSize="50sp"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/tower_cost"
        app:layout_constraintEnd_toStartOf="@+id/path3"
        app:layout_constraintStart_toEndOf="@+id/path2"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/normal_button_template"
        android:text="@string/plus"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/path1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_new_tower_button"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/normal_button_template"
        android:text="@string/add_new_tower"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/normal_button_template"
        android:text="@string/enter"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/path1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="415dp"
        android:background="@drawable/normal_button_template_2"
        android:text="Help"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calculator_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tower_selection_background"
        android:layout_width="208dp"
        android:layout_height="52dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="208dp"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/tower_selection"
        android:dropDownSelector="@color/black"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/path2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tower_1"
        app:layout_constraintTop_toTopOf="@+id/small_background" />

</androidx.constraintlayout.widget.ConstraintLayout>